Add `-XX:+UseCompactObjectHeaders` to JVM arguments in build script